--- a/Gen1/gen1.html
+++ b/Gen1/gen1.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/style_grid.css" />
     <script src="../js/script.js"></script>
     <link
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -25,90 +26,93 @@
     POKEDEX
   </h1>
 
-  <div class="navbar">
-    <a href="#home" id="Home" onclick="changeTabs(this.id,'g')">Home</a>
-    <div class="dropdown">
-      <button class="dropbtn">
-        Generations
-        <i class="fa fa-caret-down"></i>
-      </button>
-      <div class="dropdown-content">
-        <a class="active" href="#">Gen1</a>
-        <a id="Gen2" onclick="changeTabs(this.id,'g')" href="#">Gen2</a>
-        <a id="Gen3" onclick="changeTabs(this.id,'g')" href="#">Gen3</a>
-        <a id="Gen4" onclick="changeTabs(this.id,'g')" href="#">Gen4</a>
-        <a id="Gen5" onclick="changeTabs(this.id,'g')" href="#">Gen5</a>
-        <a id="Gen6" onclick="changeTabs(this.id,'g')" href="#">Gen6</a>
-        <a id="Gen7" onclick="changeTabs(this.id,'g')" href="#">Gen7</a>
+  <body>
+    <div class="grid-container">
+      <div class="item1">
+        <div class="navbar">
+          <a href="#home" id="Home" onclick="changeTabs(this.id,'g')">Home</a>
+          <div class="dropdown">
+            <button class="dropbtn">
+              Generations
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a class="active" href="#">Gen1</a>
+              <a id="Gen2" onclick="changeTabs(this.id,'g')" href="#">Gen2</a>
+              <a id="Gen3" onclick="changeTabs(this.id,'g')" href="#">Gen3</a>
+              <a id="Gen4" onclick="changeTabs(this.id,'g')" href="#">Gen4</a>
+              <a id="Gen5" onclick="changeTabs(this.id,'g')" href="#">Gen5</a>
+              <a id="Gen6" onclick="changeTabs(this.id,'g')" href="#">Gen6</a>
+              <a id="Gen7" onclick="changeTabs(this.id,'g')" href="#">Gen7</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item2"><h2>1st Generation</h2></div>
+      <div class="item3">
+        <input
+          type="text"
+          id="Input"
+          onkeyup="myFunction()"
+          placeholder="Search for Pokemons..."
+        />
+      </div>
+      <div class="item4">
+        <table border="1;" width="100%" id="pokeTable">
+          <thead style="background-color: rgb(139, 138, 138);">
+            <tr>
+              <th>Pokemon</th>
+              <th>Type</th>
+              <th>Picture</th>
+              <th>Stats</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Charmander</td>
+              <td><div class="fire">Fire</div></td>
+              <td>
+                <img src="../img/charmander.png" height="100;" width="120;" />
+              </td>
+              <td>
+                <button>
+                  <a href="charmander.html">Click Me For STATS</a>
+                </button>
+              </td>
+            </tr>
+
+            <tr>
+              <td>Charmeleon</td>
+              <td><div class="fire">Fire</div></td>
+              <td>
+                <img src="../img/charmeleon.png" height="100;" width="120;" />
+              </td>
+              <td>
+                <button>
+                  <a href="charmeleon.html">Click Me For STATS</a>
+                </button>
+              </td>
+            </tr>
+
+            <tr>
+              <td>Charizard</td>
+              <td>
+                <div class="fire">Fire</div>
+                <div class="flying">Flying</div>
+              </td>
+              <td>
+                <img src="../img/charizard.png" height="100;" width="120;" />
+              </td>
+              <td>
+                <button>
+                  <a href="charizard.html">Click Me For STATS</a>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
-  </div>
-
-  <body>
-    <br />
-    <h2>1st Generation</h2>
-    <input
-      type="text"
-      id="Input"
-      onkeyup="myFunction()"
-      placeholder="Search for Pokemons..."
-      style="float: right;"
-    />
-    <p></p>
-
-    <table border="1;" width="100%" id="pokeTable">
-      <thead style="background-color: rgb(139, 138, 138);">
-        <tr>
-          <th>Pokemon</th>
-          <th>Type</th>
-          <th>Picture</th>
-          <th>Stats</th>
-        </tr>
-      </thead>
-
-      <tbody>
-        <tr>
-          <td>Charmander</td>
-          <td><div class="fire">Fire</div></td>
-          <td>
-            <img src="../img/charmander.png" height="100;" width="120;" />
-          </td>
-          <td>
-            <button>
-              <a href="charmander.html">Click Me For STATS</a>
-            </button>
-          </td>
-        </tr>
-
-        <tr>
-          <td>Charmeleon</td>
-          <td><div class="fire">Fire</div></td>
-          <td>
-            <img src="../img/charmeleon.png" height="100;" width="120;" />
-          </td>
-          <td>
-            <button>
-              <a href="charmeleon.html">Click Me For STATS</a>
-            </button>
-          </td>
-        </tr>
-
-        <tr>
-          <td>Charizard</td>
-          <td>
-            <div class="fire">Fire</div>
-            <div class="flying">Flying</div>
-          </td>
-          <td>
-            <img src="../img/charizard.png" height="100;" width="120;" />
-          </td>
-          <td>
-            <button>
-              <a href="charizard.html">Click Me For STATS</a>
-            </button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
   </body>
 </html>
